fix footer horizontal scroll

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -51,6 +51,9 @@
 			padding-top: 10px;
 		}
 	}
+	.custom-width{
+		margin-left: 0px;
+	}
 }
 
 @media (max-width: 767px){
